--- a/p-fb-configmap-secret.yaml
+++ b/p-fb-configmap-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: p-fb-configmap-secret
+  namespace: devops-ramses
   labels:
     app: pesbuk-secret
 data:
