--- a/p-fb-pod-secret.yaml
+++ b/p-fb-pod-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: php-pesbuk-secret
+  namespace: devops-ramses
   labels:
     app: pesbuk-secret
 spec:
