--- a/p-fb-secret-service.yaml
+++ b/p-fb-secret-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pesbuk-secret-service
+  namespace: devops-ramses
 spec:
   selector:
     app: pesbuk-secret
