--- a/p-fb-configmap-secret.yaml
+++ b/p-fb-configmap-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: p-fb-configmap-secret
-  namespace: devops-ramses
+  namespace: devops-ramses-secret
   labels:
     app: pesbuk-secret
 data:
