--- a/p-fb-pod-secret.yaml
+++ b/p-fb-pod-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: php-pesbuk-secret
-  namespace: devops-ramses
+  namespace: devops-ramses-secret
   labels:
     app: pesbuk-secret
 spec:
