--- a/p-fb-secret-service.yaml
+++ b/p-fb-secret-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pesbuk-secret-service
-  namespace: devops-ramses
+  namespace: devops-ramses-secret
 spec:
   selector:
     app: pesbuk-secret
