--- a/p-fb-secret.yaml
+++ b/p-fb-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: p-secret-fb
-  namespace: devops-ramses
+  namespace: devops-ramses-secret
   labels:
     app: pesbuk-secret
 type: Opaque
